--- a/index.html
+++ b/index.html
@@ -1,10 +1,12 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>
+        <title>who am I?</title>
         <meta charset="utf-8"
     </head>
     <body>
-        <p>Hello, World</p>
+        Jean Vandershmidt
+        55 Rue Street
+        Fuckollins, VA 80231
     </body>
 </html>
