random shit, headers, paragraph em, strong

--- a/index.html
+++ b/index.html
@@ -1,12 +1,23 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>who am I?</title>
-        <meta charset="utf-8"
+        <title>Learn enough html</title>
+        <meta charset="utf-8" />
     </head>
     <body>
-        Jean Vandershmidt
-        55 Rue Street
-        Fuckollins, VA 80231
+        <h1>The Learn Enough</h1>
+        <h2>Background</h2>
+        <h2>founders</h2>
+        <h3>fuck face one</h3>
+        <h3>fuck face two</h3>
+        <h4>fuck face three with h4</h4>
+        <h5>h5</h5>
+        <h6>h6</h6>
+        <p>
+            this is another <em>paragraph</em><strong>this is strong</strong>
+
+        </p>
+
+
     </body>
 </html>
