--- a/tables.html
+++ b/tables.html
@@ -23,6 +23,15 @@
             most important ones. 
         </p>
 
+        <h2> Bulock Elements </h2>
+
+        <table>
+            <tr>
+                <th>Tag</th>
+                <th>Name</th>
+                <th>Purpose</th>
+            </tr>
+        </table>
     </body>
 </html>
 
