--- a/tables.html
+++ b/tables.html
@@ -23,13 +23,18 @@
             most important ones. 
         </p>
 
-        <h2> Bulock Elements </h2>
+        <h2> Block Elements </h2>
 
         <table>
             <tr>
                 <th>Tag</th>
                 <th>Name</th>
                 <th>Purpose</th>
+            </tr>
+            <tr>
+                <td><code>h1</code>&ndash;<code>h6</code></td>
+                <td>headings</td>
+                <td>include a heading (levels 1&ndash;6)</td>
             </tr>
         </table>
     </body>
