fix strong, img, href

--- a/tags.html
+++ b/tags.html
@@ -86,7 +86,7 @@
                 <td>
                     <code>&lt;strong&gt; at least a billion people&lt;/strong&gt;</code>
                 </td>
-                <td>FILL_IN</td>
+                <td>This makes<strong>strong</strong> text inline</td>
             </tr>
             <tr>
                 <td><code>a</code></td>
@@ -95,7 +95,7 @@
                 <td>
                     <code>&lt;a href="http://learnenough.com/"&gt;Learn Enough&lt;/a&gt;</code>
                 </td>
-                <td>FILL_IN</td>
+                <td>This is a<a href="http://learnenough.com/" target="_blank">inline link</a></td>
             </tr>
             <tr>
                 <td><code>img</code></td>
@@ -104,7 +104,7 @@
                 <td>
                     <code>&lt;img src="http://bit.ly/1MZAFuQ" alt="Michael Hartl"&gt;</code>
                 </td>
-                <td>FILL_IN</td>
+                <td><img src="http://bit.ly/1MZAFuQ" /></td>
             </tr>
         </table>
     </body>
