fix some typos in tags

--- a/tags.html
+++ b/tags.html
@@ -95,12 +95,12 @@
                 <td>
                     <code>&lt;a href="http://learnenough.com/"&gt;Learn Enough&lt;/a&gt;</code>
                 </td>
-                <td>This is a<a href="http://learnenough.com/" target="_blank">inline link</a></td>
+                <td>This is a <a href="http://learnenough.com/" target="_blank">inline link</a></td>
             </tr>
             <tr>
                 <td><code>img</code></td>
                 <td>image</td>
-                <td>include and image</td>
+                <td>include an image</td>
                 <td>
                     <code>&lt;img src="http://bit.ly/1MZAFuQ" alt="Michael Hartl"&gt;</code>
                 </td>
