--- a/moby_dick.html
+++ b/moby_dick.html
@@ -26,7 +26,7 @@
         </div>
 
         <a href="https://commons.wikimedia.org/wiki/File:Sperm_whale_pod.jpg">
-            <img src="images/sperm_whale.jpg" />
+            <img src="images/sperm_whales.jpg" />
         </a>
 
         <div>
