--- a/moby_dick.html
+++ b/moby_dick.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <title>Moby Dick</title>
-        <meta charset="utf-8" />
+        <meta charset="utf-8">
     </head>
     <body>
         <!-- much here to style shit later-->
@@ -26,7 +26,7 @@
         </div>
 
         <a href="https://commons.wikimedia.org/wiki/File:Sperm_whale_pod.jpg">
-            <img src="images/sperm_whales.jpg" />
+            <img src="images/sperm_whales.jpg" alt="pic of sperm whale pod">
         </a>
 
         <div>
@@ -34,7 +34,7 @@
             <h3>Moby-Dick: A Classic Tale of the Sea</h3>
             <a href="https://www.softcover.io/read/6070fb03/moby-dick"
                target="_blank">
-                <img src="images/moby_dick.png" alt="Moby Dick" />
+                <img src="images/moby_dick.png" alt="Moby Dick">
             </a>
 
             <p>
