--- a/tags.html
+++ b/tags.html
@@ -61,6 +61,21 @@
                 <td>table data</td>
                 <td>include a table data cell</td>
             </tr>
+            <tr>
+                <td><code>div</code></td>
+                <td>div</td>
+                <td>makes a div? for styling</td>
+            </tr>
+            <tr>
+                <td><code>header</code></td>
+                <td>header</td>
+                <td>makes a header for styling</td>
+            </tr>
+            <tr>
+                <td><code>span</code></td>
+                <td>span</td>
+                <td>makes a span for styling</td>
+            </tr>
         </table>
 
         <h2>Inline elements</h2>
