--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Learn enough html</title>
+        <title>Learn enough html index.html file</title>
         <meta charset="utf-8" />
     </head>
     <body>
