move span from block to inline

--- a/tags.html
+++ b/tags.html
@@ -71,11 +71,6 @@
                 <td>header</td>
                 <td>makes a header for styling</td>
             </tr>
-            <tr>
-                <td><code>span</code></td>
-                <td>span</td>
-                <td>makes a span for styling</td>
-            </tr>
         </table>
 
         <h2>Inline elements</h2>
@@ -120,6 +115,12 @@
                     <code>&lt;img src="http://bit.ly/1MZAFuQ" alt="Michael Hartl"&gt;</code>
                 </td>
                 <td><img src="http://bit.ly/1MZAFuQ" /></td>
+            </tr>
+            <tr>
+                <td><code>span</code></td>
+                <td>span</td>
+                <td>makes a span for styling</td>
+                <td><span>has no effect but is in here</span></td>
             </tr>
         </table>
     </body>
