updates to tags html

--- a/tags.html
+++ b/tags.html
@@ -71,6 +71,16 @@
                 <td>header</td>
                 <td>makes a header for styling</td>
             </tr>
+            <tr>
+                <td><code>ol</code></td>
+                <td>ordered list</td>
+                <td>makes a (usually) numbered list</td>
+            </tr>
+            <tr>
+                <td><code>ul</code></td>
+                <td>unordered list</td>
+                <td>makes a (usually) bulleted list</td>
+            </tr>
         </table>
 
         <h2>Inline elements</h2>
@@ -121,6 +131,11 @@
                 <td>span</td>
                 <td>makes a span for styling</td>
                 <td><span>has no effect but is in here</span></td>
+            </tr>
+            <tr>
+                <td><code>li</code></td>
+                <td>list item</td>
+                <td>makes a list item, used inside ul of ol</td>
             </tr>
         </table>
     </body>
