add menu items to index

--- a/index.html
+++ b/index.html
@@ -2,9 +2,16 @@
 <html>
     <head>
         <title>Learn enough html index.html file</title>
-        <meta charset="utf-8" />
+        <meta charset="utf-8">
     </head>
     <body>
+        <div>
+            <a href="index.html">Home</a>
+            <a href="moby_dick.html">Moby Dick</a>
+            <a href="tags.html">HTML Tags</a>
+        </div>
+
+
         <h1>The Learn Enough</h1>
         <h2>Background</h2>
         <h2>founders</h2>
@@ -17,7 +24,7 @@
             this is another <em>paragraph</em><strong>this is strong</strong>
 
         </p>
-        <a href="source"
+        <a href="source"></a>
 
 
     </body>
