--- a/moby_dick.html
+++ b/moby_dick.html
@@ -12,6 +12,12 @@
         </header>
 
         <div>
+            <a href="index.html">Home</a>
+            <a href="moby_dick.html">Moby Dick</a>
+            <a href="tags.html">HTML Tags</a>
+        </div>
+
+        <div>
             <p>
                 The <a href="http://softcover.io/">Softcover</a> publishing platform
                 was designed mainly for ebooks like the
