--- a/tags.html
+++ b/tags.html
@@ -6,6 +6,12 @@
     </head>
 
     <body>
+        <div>
+            <a href="index.html">Home</a>
+            <a href="moby_dick.html">Moby Dick</a>
+            <a href="tags.html">HTML tags</a>
+        </div>
+
         <h1>Important HTML tags</h1>
 
         <img src="images/storm_trooper_tagged.jpg" alt="tagged storm trooper" />
