fix spelling on tags

--- a/tags.html
+++ b/tags.html
@@ -25,7 +25,7 @@
         </p>
 
         <p>
-            The tables below do not include all HTML tags, but them so list many of the
+            The tables below do not include all HTML tags, but they do list many of the
             most important ones. 
         </p>
 
