--- a/tags.html
+++ b/tags.html
@@ -20,7 +20,7 @@
             This page is designed as a quick reference for some of the common tags
             covered in <a href="http://learnenough.com/html-tutorial" target="_blank"><em> Learn
             Enough HTML to Be Dangerous</em></a>. In the process of making it, we'll
-            learn how to make HTML <em>taables</em> via <code>table</code> and
+            learn how to make HTML <em>tables</em> via <code>table</code> and
             related tags.
         </p>
 
