--- a/moby_dick.html
+++ b/moby_dick.html
@@ -13,8 +13,8 @@
 
         <div>
             <a href="index.html">Home</a>
+            <a href="tags.html">HTML tags</a>
             <a href="moby_dick.html">Moby Dick</a>
-            <a href="tags.html">HTML Tags</a>
         </div>
 
         <div>
