--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
         <meta charset="utf-8">
     </head>
     <body>
+        <header><h1>Yada yada</h1>Blah blah</header>
+
         <div>
             <a href="index.html">Home</a>
             <a href="tags.html">HTML Tags</a>
