--- a/moby_dick.html
+++ b/moby_dick.html
@@ -6,8 +6,8 @@
     </head>
     <body>
         <!-- much here to style shit later-->
-        <header>
-            <h1>A Softcover Book Report</h1>
+        <header style="text-align: center; margin: 0 0 80px">
+            <h1>Softcover Book Report</h1>
             <h2>Moby Dick (or, The Whale)</h2>
         </header>
 
@@ -32,15 +32,17 @@
         </div>
 
         <a href="https://commons.wikimedia.org/wiki/File:Sperm_whale_pod.jpg">
-            <img src="images/sperm_whales.jpg" alt="pic of sperm whale pod">
+            <img src="images/sperm_whales.jpg" alt="pic of sperm whale pod"
+                 style="display: block; margin:auto">
         </a>
 
-        <div>
+        <div style="width: 500px; margin: 20px auto; padding: 30px; background-color: #fafafa">
 
             <h3>Moby-Dick: A Classic Tale of the Sea</h3>
             <a href="https://www.softcover.io/read/6070fb03/moby-dick"
                target="_blank">
-                <img src="images/moby_dick.png" alt="Moby Dick">
+                <img src="images/moby_dick.png" alt="Moby Dick" height="200"
+                     style="float: left; margin: 0 40px 0 0">
             </a>
 
             <p>
@@ -50,8 +52,9 @@
                 Begins with these immortal words:
             </p>
 
-            <blockquote>
-                <span>Call me Ishmael.</span> Some years ago-never mind how long
+            <blockquote style="font-style: italic; font-size: 20px;">
+                <span style="font-style: normal; font-size: 24px; font-weight: bold; color: #f00">
+                Call me Ishmael.</span> Some years ago-never mind how long
                 precisely-having little or no money in my purse, and nothing
                 particular to interest me on shore, I thought I would sail about a
                 little and see the watery part of the world. It is a way I have of
