change up menus to right side of screen, add padding:

--- a/index.html
+++ b/index.html
@@ -5,14 +5,12 @@
         <meta charset="utf-8">
     </head>
     <body>
-        <header><h1>Yada yada</h1>Blah blah</header>
-
-        <div>
+        <div style="text-align: right;">
             <a href="index.html">Home</a>
-            <a href="tags.html">HTML Tags</a>
-            <a href="moby_dick.html">Moby Dick</a>
+            <a href="tags.html" style="margin: 0 0 0 10px;">HTML Tags</a>
+            <a href="moby_dick.html" style="margin:0 0 0 10px;">Moby Dick</a>
         </div>
-
+        <header><h1>Yada yada</h1>Blah blah</header>
 
         <h1>The Learn Enough</h1>
         <h2>Background</h2>
@@ -26,6 +24,20 @@
             this is another <em>paragraph</em><strong>this is strong</strong>
 
         </p>
-        <a href="source"></a>
+        <h2>Quotations</h2>
+
+        <p>
+            In addition to hosting most of the worlds supply of kitten videos, the
+            web is also full of inspiring quotes, perhaps none more so than this one:
+        </p>
+        <p>
+            <blockquote style="padding: 2px 20px; background: #fafafa">
+                <p>
+                    <em>Don't believe every quote you read on the internet.</em>
+                    <br />
+                    --Abraham Lincoln
+                </p>
+            </blockquote>
+        </p>
     </body>
 </html>
