--- a/moby_dick.html
+++ b/moby_dick.html
@@ -5,25 +5,32 @@
         <meta charset="utf-8">
     </head>
     <body>
-        <!-- much here to style shit later-->
-        <header style="text-align: center; margin: 0 0 80px">
-            <h1>Softcover Book Report</h1>
-            <h2>Moby Dick (or, The Whale)</h2>
-        </header>
-
-        <div>
+        <div style="text-align: right; ">
             <a href="index.html">Home</a>
-            <a href="tags.html">HTML tags</a>
-            <a href="moby_dick.html">Moby Dick</a>
+            <a href="tags.html" style="margin:0 0 0 10px;">HTML tags</a>
+            <a href="moby_dick.html" style="margin: 0 0 0 10px;">Moby Dick</a>
+
+            <!-- much here to style shit later-->
+            <header style="text-align: center; margin: 0 0 80px">
+                <h1>Softcover Book Report</h1>
+                <h2>Moby Dick (or, The Whale)</h2>
+            </header>
+
         </div>
 
         <div>
             <p>
                 The <a href="http://softcover.io/">Softcover</a> publishing platform
                 was designed mainly for ebooks like the
-                <a href="http://railstutorial.org/book"><em>Ruby on Rails tutorial</em>
-                book</a> and <a href="http://learnenough.com/html"><em>Learn Enough
-                HTML to Be Dangerous</em></a>, but it's also good for making more
+                <a href="http://railstutorial.org/book">
+                    <em>Ruby on Rails tutorial</em>
+                    book
+                </a> and <a href="http://learnenough.com/html">
+                    <em>
+                        Learn Enough
+                        HTML to Be Dangerous
+                    </em>
+                </a>, but it's also good for making more
                 traditional books, such as the novel <em>Moby-Dick</em> by Herman
                 Melville (sometimes written as <em>Moby Dick</em>). We present below a
                 short and affectionately irreverent book report on this classic of
@@ -48,13 +55,15 @@
             <p>
                 <a href="https://www.softcover.io/read/6070fb03/moby-dick"
                    target="_blank">
-                    <em>Moby-Dick</em></a> by Herman Melville
+                    <em>Moby-Dick</em>
+                </a> by Herman Melville
                 Begins with these immortal words:
             </p>
 
             <blockquote style="font-style: italic; font-size: 20px;">
                 <span style="font-style: normal; font-size: 24px; font-weight: bold; color: #f00">
-                Call me Ishmael.</span> Some years ago-never mind how long
+                    Call me Ishmael.
+                </span> Some years ago-never mind how long
                 precisely-having little or no money in my purse, and nothing
                 particular to interest me on shore, I thought I would sail about a
                 little and see the watery part of the world. It is a way I have of
@@ -64,8 +73,10 @@
             <p>
                 After driving off his spleen (which <em>can't</em> be good for you),
                 Ishmael then goes on in much the same vein for approximately one
-                jillion pages. The only thing bigger than Moby Dick (who--<em>spoiler
-                alert!</em>--is a giant whale) is the book itself.
+                jillion pages. The only thing bigger than Moby Dick (who--<em>
+                    spoiler
+                    alert!
+                </em>--is a giant whale) is the book itself.
             </p>
 
             <h4>Our top 3 favorite things about Moby Dick</h4>
@@ -80,9 +91,11 @@
 
             <ul>
                 <li>Chapter after chapter (after chapter) of meticulous detail about whaling</li>
-                <li>The story pretty much
+                <li>
+                    The story pretty much
                     <a href="https://en.wikipedia.org/wiki/Essex_(whaleship)" target="_blank">
-                        happened in real life</a>
+                        happened in real life
+                    </a>
                 </li>
                 <li>Mad sea captains are fun</li>
             </ul>
