--- a/tags.html
+++ b/tags.html
@@ -6,10 +6,10 @@
     </head>
 
     <body>
-        <div>
+        <div style="text-align: right;">
             <a href="index.html">Home</a>
-            <a href="tags.html">HTML tags</a>
-            <a href="moby_dick.html">Moby Dick</a>
+            <a href="tags.html" style="margin: 0 0 0 10px;">HTML tags</a>
+            <a href="moby_dick.html" style="margin: 0 0 0 10px;">Moby Dick</a>
         </div>
 
         <h1>Important HTML tags</h1>
@@ -18,15 +18,19 @@
 
         <p>
             This page is designed as a quick reference for some of the common tags
-            covered in <a href="http://learnenough.com/html-tutorial" target="_blank"><em> Learn
-            Enough HTML to Be Dangerous</em></a>. In the process of making it, we'll
+            covered in <a href="http://learnenough.com/html-tutorial" target="_blank">
+                <em>
+                    Learn
+                    Enough HTML to Be Dangerous
+                </em>
+            </a>. In the process of making it, we'll
             learn how to make HTML <em>tables</em> via <code>table</code> and
             related tags.
         </p>
 
         <p>
             The tables below do not include all HTML tags, but they do list many of the
-            most important ones. 
+            most important ones.
         </p>
 
         <h2> Block Elements </h2>
