--- a/index.html
+++ b/index.html
@@ -6,10 +6,11 @@
     </head>
     <body>
         <div style="text-align: right;">
-            <a href="index.html">Home</a>
-            <a href="tags.html" style="margin: 0 0 0 10px;">HTML Tags</a>
-            <a href="moby_dick.html" style="margin:0 0 0 10px;">Moby Dick</a>
+            <a href="index.html" style="text-decoration:none; color:blue;">Home</a>
+            <a href="tags.html" style="margin-left: 10px; text-decoration: none; color: blue;">HTML tags</a>
+            <a href="moby_dick.html" style="margin-left: 10px; text-decoration:none; color:blue">Moby Dick</a>
         </div>
+
         <header><h1>Yada yada</h1>Blah blah</header>
 
         <h1>The Learn Enough</h1>
