--- a/moby_dick.html
+++ b/moby_dick.html
@@ -5,10 +5,10 @@
         <meta charset="utf-8">
     </head>
     <body>
-        <div style="text-align: right; ">
-            <a href="index.html">Home</a>
-            <a href="tags.html" style="margin:0 0 0 10px;">HTML tags</a>
-            <a href="moby_dick.html" style="margin: 0 0 0 10px;">Moby Dick</a>
+        <div style="text-align: right;">
+            <a href="index.html" style="text-decoration:none; color:blue;">Home</a>
+            <a href="tags.html" style="margin-left: 10px; text-decoration: none; color: blue;">HTML tags</a>
+            <a href="moby_dick.html" style="margin-left: 10px; text-decoration:none; color:blue">Moby Dick</a>
 
             <!-- much here to style shit later-->
             <header style="text-align: center; margin: 0 0 80px">
