--- a/tags.html
+++ b/tags.html
@@ -7,9 +7,9 @@
 
     <body>
         <div style="text-align: right;">
-            <a href="index.html">Home</a>
-            <a href="tags.html" style="margin: 0 0 0 10px;">HTML tags</a>
-            <a href="moby_dick.html" style="margin: 0 0 0 10px;">Moby Dick</a>
+            <a href="index.html" style="text-decoration:none; color:blue;">Home</a>
+            <a href="tags.html" style="margin-left: 10px; text-decoration: none; color: blue;">HTML tags</a>
+            <a href="moby_dick.html" style="margin-left: 10px; text-decoration:none; color:blue">Moby Dick</a>
         </div>
 
         <h1>Important HTML tags</h1>
@@ -42,17 +42,32 @@
                 <th>Purpose</th>
             </tr>
             <tr>
-                <td style="padding: 10px"><code>h1</code>&ndash;<code>h6</code></td>
+                <td><code>html</code></td>
+                <td>html</td>
+                <td>designates the html contents</td>
+            </tr>
+            <tr>
+                <td><code>head</code></td>
+                <td>head</td>
+                <td>designates the header</td>
+            </tr>
+            <tr>
+                <td><code>body</code></td>
+                <td>body</td>
+                <td>designates the body of the file</td>
+            </tr>
+            <tr>
+                <td><code>h1</code>&ndash;<code>h6</code></td>
                 <td>headings</td>
                 <td>include a heading (levels 1&ndash;6)</td>
             </tr>
             <tr>
-                <td style="padding: 10px"><code>p</code></td>
+                <td><code>p</code></td>
                 <td>paragraph</td>
                 <td>include a paragraph of text</td>
             </tr>
             <tr>
-                <td style="padding: 10px"><code>table</code></td>
+                <td><code>table</code></td>
                 <td>table</td>
                 <td>include a table</td>
             </tr>
@@ -146,6 +161,11 @@
                 <td><code>li</code></td>
                 <td>list item</td>
                 <td>makes a list item, used inside ul of ol</td>
+            </tr>
+            <tr>
+                <td><code>meta</code></td>
+                <td>meta</td>
+                <td>lets you set stuff like character</td>
             </tr>
         </table>
     </body>
