--- a/index.html
+++ b/index.html
@@ -1,44 +1,57 @@
 <!DOCTYPE html>
-<html>
-    <head>
-        <title>Learn enough html index.html file</title>
-        <meta charset="utf-8">
-    </head>
-    <body>
-        <div style="text-align: right;">
-            <a href="index.html" style="text-decoration:none; color:blue;">Home</a>
-            <a href="tags.html" style="margin-left: 10px; text-decoration: none; color: blue;">HTML tags</a>
-            <a href="moby_dick.html" style="margin-left: 10px; text-decoration:none; color:blue">Moby Dick</a>
-        </div>
-
-        <header><h1>Yada yada</h1>Blah blah</header>
-
-        <h1>The Learn Enough</h1>
-        <h2>Background</h2>
-        <h2>founders</h2>
-        <h3>fuck face one</h3>
-        <h3>fuck face two</h3>
-        <h4>fuck face three with h4</h4>
-        <h5>h5</h5>
-        <h6>h6</h6>
-        <p>
-            this is another <em>paragraph</em><strong>this is strong</strong>
-
-        </p>
-        <h2>Quotations</h2>
-
-        <p>
-            In addition to hosting most of the worlds supply of kitten videos, the
-            web is also full of inspiring quotes, perhaps none more so than this one:
-        </p>
-        <p>
-            <blockquote style="padding: 2px 20px; background: #fafafa">
-                <p>
-                    <em>Don't believe every quote you read on the internet.</em>
-                    <br />
-                    --Abraham Lincoln
-                </p>
-            </blockquote>
-        </p>
-    </body>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>About Me - [Your Name]</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            background-color: rgb(47, 110, 160);
+            color: white;
+            margin: 0;
+            padding: 0;
+        }
+        .container {
+            max-width: 800px;
+            margin: auto;
+            padding: 20px;
+        }
+        header {
+            text-align: center;
+            padding: 20px 0;
+        }
+        a {
+            color: #CAF0F8;
+            text-decoration: none;
+            padding: 0 10px;
+        }
+        a:hover {
+            text-decoration: underline;
+        }
+        h1, h2 {
+            color: #ADE8F4;
+        }
+        p {
+            line-height: 1.6;
+        }
+    </style>
+</head>
+<body>
+    <div class="container">
+        <header>
+            <h1>Welcome to My Homepage</h1>
+            <nav>
+                <a href="index.html">Home</a>
+                <a href="projects.html">Projects</a>
+                <a href="contact.html">Contact</a>
+            </nav>
+        </header>
+        <section>
+            <h2>About Me</h2>
+            <p>Hello, I'm [Your Name], a college student specializing in Cybersecurity at MSU Denver. My passion for technology drives my career and academic pursuits. I work as a network engineer, network administrator, systems administrator, and systems engineer, where I manage complex network systems and ensure robust cybersecurity measures.</p>
+            <p>In my free time, I enjoy exploring new technologies, working on personal projects, and contributing to open-source initiatives. This webpage is a portfolio of my work, achievements, and interests in the field of Cybersecurity and technology.</p>
+        </section>
+    </div>
+</body>
 </html>
