--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
         </header>
         <section>
             <h2>About Me</h2>
-            <p>Hello, I'm [Your Name], a college student specializing in Cybersecurity at MSU Denver. My passion for technology drives my career and academic pursuits. I work as a network engineer, network administrator, systems administrator, and systems engineer, where I manage complex network systems and ensure robust cybersecurity measures.</p>
+            <p>Hello, I'm Mark LaBarbara, a college student specializing in Cybersecurity at MSU Denver. My passion for technology drives my career and academic pursuits. I work as a network engineer, network administrator, systems administrator, and systems engineer, where I manage complex network systems and ensure robust cybersecurity measures.</p>
             <p>In my free time, I enjoy exploring new technologies, working on personal projects, and contributing to open-source initiatives. This webpage is a portfolio of my work, achievements, and interests in the field of Cybersecurity and technology.</p>
         </section>
     </div>
