--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <style>
         body {
             font-family: Arial, sans-serif;
-            background-color: rgb(47, 110, 160);
+            background-color: rgb(47, 110, 160); /* Adjust the main background if needed */
             color: white;
             margin: 0;
             padding: 0;
@@ -20,14 +20,16 @@
         header {
             text-align: center;
             padding: 20px 0;
+            background-color: rgb(45, 80, 156); /* Darker blue for the header */
         }
         a {
-            color: #CAF0F8;
+            color: rgb(220, 225, 235); /* Soft white for links */
             text-decoration: none;
             padding: 0 10px;
         }
         a:hover {
             text-decoration: underline;
+            color: rgb(108, 142, 191); /* Lighter blue for hovered links */
         }
         h1, h2 {
             color: #ADE8F4;
