--- a/contact.html
+++ b/contact.html
@@ -61,8 +61,8 @@
         <p>You can reach me through the following platforms:</p>
         <ul>
             <li>Email: <a href="mailto:mdl@markserver.cc">mdl@markserver.cc</a></li>
-            <li>LinkedIn: <a href="your-linkedin-profile-url" target="https://www.linkedin.com/in/mark-it/">LinkedIn Profile</a></li>
-            <li>GitHub: <a href="your-github-profile-url" target="https://github.com/Mlabarbara">GitHub Profile</a></li>
+            <li>LinkedIn: <a href="https://www.linkedin.com/in/mark-it/" target="_blank">LinkedIn Profile</a></li>
+            <li>GitHub: <a href="https://github.com/Mlabarbara" target="_blank">GitHub Profile</a></li>
             <!-- Add other social media or professional profiles as needed -->
         </ul>
     </section>
