--- a/index.html
+++ b/index.html
@@ -37,6 +37,12 @@
         p {
             line-height: 1.6;
         }
+        img.headshot {
+           display: block;
+           max-width: 50%; 
+           height: auto;
+           margin: 20px auto; 
+          }
     </style>
 </head>
 <body>
@@ -49,6 +55,7 @@
                 <a href="contact.html">Contact</a>
             </nav>
         </header>
+        <img src="img/headshot.png" alt="Mark LaBarbara's Headshot" class="headshot">
         <section>
             <h2>About Me</h2>
             <p>Hello, I'm Mark LaBarbara, a college student specializing in Cybersecurity at MSU Denver. My passion for technology drives my career and academic pursuits. I work as a network engineer, network administrator, systems administrator, and systems engineer, where I manage complex network systems and ensure robust cybersecurity measures.</p>
