main.css and edit html files

--- a/contact.html
+++ b/contact.html
@@ -5,6 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Contact Me - Mark LaBarbara</title>
+    <link rel="stylesheet" href="/styles/main.css">
+<!--    
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -45,6 +47,7 @@
             margin-bottom: 10px; /* Adds spacing between list items */
         }
     </style>
+-->
 </head>
 <body>
 <div class="container">
