--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>About Me - Mark LaBarbara</title>
+    <link rel="stylesheet" href="/styles/main.css">
+<!---
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -44,6 +46,7 @@
            margin: 20px auto; 
           }
     </style>
+-->
 </head>
 <body>
     <div class="container">
