--- a/contact.html
+++ b/contact.html
@@ -63,7 +63,7 @@
         <h2>Let's Connect</h2>
         <p>You can reach me through the following platforms:</p>
         <ul>
-            <li>Email: <a href="mailto:mdl@markserver.cc">mdl@markserver.cc</a></li>
+            <li>Email: <a href="mailto:mark@markserver.cc">mdl@markserver.cc</a></li>
             <li>LinkedIn: <a href="https://www.linkedin.com/in/mark-it/" target="_blank">LinkedIn Profile</a></li>
             <li>GitHub: <a href="https://github.com/Mlabarbara" target="_blank">GitHub Profile</a></li>
             <!-- Add other social media or professional profiles as needed -->
