--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
                 <a href="contact.html">Contact</a>
             </nav>
         </header>
-        <img src="images/headshot.png" alt="Mark LaBarbara's Headshot" class="headshot">
+        <img src="images/headshot.png" class="responsive-image" alt="Mark LaBarbara's Headshot">
         <section>
             <h2>About Me</h2>
             <p>Hello, I'm Mark LaBarbara, a college student specializing in Cybersecurity at MSU Denver. My passion for technology drives my career and academic pursuits. I work as a network engineer, network administrator, systems administrator, and systems engineer, where I manage complex network systems and ensure robust cybersecurity measures.</p>
